--- a/page1.html
+++ b/page1.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section class="header9 cid-s9kJHyTfIA mbr-fullscreen mbr-parallax-background" id="header9-3">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="header9 cid-s9kJHyTfIA mbr-fullscreen mbr-parallax-background" id="header9-3">
 
     
 
@@ -94,47 +94,13 @@
 
     <div class="container">
         <div class="media-container-column mbr-white col-lg-8 col-md-10">
-            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">Sudanese Org for Relief &amp; Recovery&nbsp;</h1>
+            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-5"><br><br>Sudanese Org for Relief &amp; Recovery&nbsp;</h1>
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><strong>SORC
             </strong></h3>
-            <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
+            <p class="mbr-text align-left pb-3 mbr-fonts-style display-7">
                 Sudanese Org for Relief &amp; Recovery (SORC) is a Sudanese national voluntary charitable humanitarian non-govemmental organization. They work in the area of conflict mitigation, resolution, prevention and reconciliation but mainly through capacity buiIding partners programs like ESNFI, Protection, Food security and livelihoods. UNOPS/UNHCR have been with SORC since 2014 in ESNFI program} funded through pooled fund Sudan humanitarian fund (SHF) formerly Common humanitarian fund (CHF) of whicfi UNHCR is the sector lead.</p>
-            <div class="mbr-section-btn align-left">
-                <a class="btn btn-md btn-primary display-4" href="https://mobirise.co">LEARN MORE</a>
-                <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.co">LIVE DEMO</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
-        <a href="#next">
-            <i class="mbri-down mbr-iconfont"></i>
-        </a>
-    </div>
-</section>
-
-<section class="header9 cid-s9kJHZo1qk mbr-fullscreen mbr-parallax-background" id="header9-4">
-
-    
-
-    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(255, 255, 255);">
-    </div>
-
-    <div class="container">
-        <div class="media-container-column mbr-white col-lg-8 col-md-10">
-            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">
-                FULL SCREEN INTRO
-            </h1>
-            <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2">
-                Beautiful mobile websites
-            </h3>
-            <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
-                Click any text to edit or style it. Select text to insert a link. Click blue "Gear" icon in the top right corner to hide/show buttons, text, title and change the block background. Click red "+" in the bottom right corner to add a new block. Use the top left menu to create new pages, sites and add themes.
-            </p>
-            <div class="mbr-section-btn align-left">
-                <a class="btn btn-md btn-primary display-4" href="https://mobirise.co">LEARN MORE</a>
-                <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.co">LIVE DEMO</a>
-            </div>
+            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="https://mobirise.co">Home</a>
+                <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.co">ContactUs</a></div>
         </div>
     </div>
 
