create github pages

--- a/page2.html
+++ b/page2.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="header9 cid-s9kVUxwpKf mbr-fullscreen mbr-parallax-background" id="header9-6">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="header9 cid-s9kVUxwpKf mbr-fullscreen mbr-parallax-background" id="header9-6">
 
     
 
