create github pages

--- a/page1.html
+++ b/page1.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="header9 cid-s9kJHyTfIA mbr-fullscreen mbr-parallax-background" id="header9-3">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section class="header9 cid-s9kJHyTfIA mbr-fullscreen mbr-parallax-background" id="header9-3">
 
     
 
