--- a/page2.html
+++ b/page2.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="header9 cid-s9kVUxwpKf mbr-fullscreen mbr-parallax-background" id="header9-6">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="header9 cid-s9kVUxwpKf mbr-fullscreen mbr-parallax-background" id="header9-6">
 
     
 
@@ -89,9 +89,9 @@
 
     <div class="container">
         <div class="media-container-column mbr-white col-lg-8 col-md-10">
-            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">OUR PARTTNERS&nbsp;</h1>
-            <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><strong>*Concern Worldwide</strong><br><strong>*UNHCR</strong><br></h3>
-            <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
+            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-5">OUR PARTTNERS&nbsp;</h1>
+            <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5"><strong>*Concern Worldwide</strong><br><strong>*UNHCR</strong><br></h3>
+            <p class="mbr-text align-left pb-3 mbr-fonts-style display-7">
                 Sudanese Org for Relief &amp; Recovery (SORC) is a Sudanese national voluntary charitable humanitarian non-govemmental organization. They work in the area of conflict mitigation,&nbsp;</p>
             <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="index.html">Home</a>
                 <a class="btn btn-md btn-black-outline display-4" href="page3.html">ContactUs</a></div>
