--- a/Home.html
+++ b/Home.html
@@ -77,13 +77,13 @@
                     </a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html"><span class="socicon socicon-google mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Gallery</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://zedabi222.github.io/webhome/"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://zedabi222.github.io/webhome/" target="_blank"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>
                     Designer</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-s9kfBqaL5k mbr-fullscreen mbr-parallax-background" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="cid-s9kfBqaL5k mbr-fullscreen mbr-parallax-background" id="header2-0">
 
     
 
