--- a/page3.html
+++ b/page3.html
@@ -77,13 +77,13 @@
                     </a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html"><span class="socicon socicon-google mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Gallery</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://zedabi222.github.io/webhome/"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://zedabi222.github.io/webhome/" target="_blank"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>
                     Designer</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section form1 cid-s9l0VHNy8Y mbr-parallax-background" id="form1-d">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="mbr-section form1 cid-s9l0VHNy8Y mbr-parallax-background" id="form1-d">
 
     
 
@@ -101,7 +101,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qCMPkt6SduusVxguYtSllw7GXA5M7TlySqCrqV0unlkhIOsA+EH0sFQBxCZv6fXri3EFIBmHXSZQTRnuaTDxTpXbzNtO4yBupO8Cd7z5+HHACzDxQV+i/rTn2oMfJzYH">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="a3HX9Z6mxYAP8KZg0eH7KlGujQzskO0OIrS8Ze8NXKGBUKSZ9N1+KXQI9z3b8JOwx/k3SSOfoPMi/MKRhqJEjSQ6LR2U+4M3QWAyxdkKNhhVeDPKKIN2ZdrAhyFeZXSV">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
