create github pages

--- a/page3.html
+++ b/page3.html
@@ -77,13 +77,17 @@
                     </a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html"><span class="socicon socicon-google mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Gallery</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://zedabi222.github.io/webhome/" target="_blank"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>
-                    Designer</a></div>
+            <div class="navbar-buttons mbr-section-btn">
+                <a class="btn btn-sm btn-primary display-4" href="https://mobirise.co">
+                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
+                    Try It Now!
+                </a>
+            </div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web builder</a></section><section class="mbr-section form1 cid-s9l0VHNy8Y mbr-parallax-background" id="form1-d">
+<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="mbr-section form1 cid-s9l0VHNy8Y mbr-parallax-background" id="form1-d">
 
     
 
@@ -101,7 +105,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uQRcxcLU1weJEfesFNTDqLsD0oIX/xPH/B7RlMyCgFgsO9fZB7P1w/w/L9ZWxGWaGarQkB9iolj/36ET005lHISszAZ95jF2G7HkCeKGLFjMs8vhCq0hEKFfmx5i30Xc">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="AmnwGRbBbe9PEs17WZvRttt0xE2DlyCWJCq5+EBjRYA5WV5bnnGYxXfdlGJmvOmtUGe50zwHt/0PtXTz3LH7pPe4PGVbgtQxL+bGaPT7iL7BbqlcEAnUj8TvylOy8iQS">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
