--- a/Home.html
+++ b/Home.html
@@ -77,13 +77,17 @@
                     </a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html"><span class="socicon socicon-google mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Gallery</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://zedabi222.github.io/webhome/" target="_blank"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>
-                    Designer</a></div>
+            <div class="navbar-buttons mbr-section-btn">
+                <a class="btn btn-sm btn-primary display-4" href="https://mobirise.co">
+                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
+                    Try It Now!
+                </a>
+            </div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="cid-s9kfBqaL5k mbr-fullscreen mbr-parallax-background" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="cid-s9kfBqaL5k mbr-fullscreen mbr-parallax-background" id="header2-0">
 
     
 
@@ -98,7 +102,7 @@
                     Sudanese Organization for Relief and Recovery (SORC) is a Sudanese national voluntary charitable humanitarian none-governmental organization.
                 </p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="page1.html">READ MORE</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">LIVE DEMO</a></div>
+                    <a class="btn btn-md btn-white-outline display-4" href="page3.html">ContactUs</a></div>
             </div>
         </div>
     </div>
