--- a/page4.html
+++ b/page4.html
@@ -78,13 +78,17 @@
                     </a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html"><span class="socicon socicon-google mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Gallery</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://zedabi222.github.io/webhome/" target="_blank"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn"></span>
-                    Designer</a></div>
+            <div class="navbar-buttons mbr-section-btn">
+                <a class="btn btn-sm btn-primary display-4" href="https://mobirise.co">
+                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
+                    Try It Now!
+                </a>
+            </div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="mbr-gallery mbr-slider-carousel cid-s9l3D2flIN" id="gallery3-f">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-s9l3D2flIN" id="gallery3-f">
 
     
 
