create github pages

--- a/page3.html
+++ b/page3.html
@@ -46,11 +46,8 @@
                          <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap">
-                    <a class="navbar-caption text-white display-4" href="https://mobirise.co">
-                        MOBIRISE
-                    </a>
-                </span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.co">
+                        Ar</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -77,17 +74,13 @@
                     </a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html"><span class="socicon socicon-google mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Gallery</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn">
-                <a class="btn btn-sm btn-primary display-4" href="https://mobirise.co">
-                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
-                    Try It Now!
-                </a>
-            </div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.co"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn">Designer</span>
+                    </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="mbr-section form1 cid-s9l0VHNy8Y mbr-parallax-background" id="form1-d">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-section form1 cid-s9l0VHNy8Y mbr-parallax-background" id="form1-d">
 
     
 
@@ -105,7 +98,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="AmnwGRbBbe9PEs17WZvRttt0xE2DlyCWJCq5+EBjRYA5WV5bnnGYxXfdlGJmvOmtUGe50zwHt/0PtXTz3LH7pPe4PGVbgtQxL+bGaPT7iL7BbqlcEAnUj8TvylOy8iQS">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IPvp5VictcxuF6uN6xsEINLkecf3GRwcZLllUCJSUptxgLmL7Y5+rxod/NNwW22mHMH7Hi9q37K6/VKl9dkVc1w6sWXPufhQnJUmmDITw7lVssPgoeD/1ogBl0HltdbA">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
