create github pages

--- a/Home.html
+++ b/Home.html
@@ -68,13 +68,13 @@
                         ContactUs</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="page4.html"><span class="socicon socicon-google mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Gallary</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="https://zedabi222.github.io/webhome/page1.html"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn">Designr</span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="https://zedabi222.github.io/webhome"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn">Designr</span>
                     </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="cid-s9kfBqaL5k mbr-fullscreen mbr-parallax-background" id="header2-0">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-s9kfBqaL5k mbr-fullscreen mbr-parallax-background" id="header2-0">
 
     
 
