--- a/page1.html
+++ b/page1.html
@@ -68,13 +68,13 @@
                         ContactUs</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="page4.html"><span class="socicon socicon-google mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Gallary</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="https://zedabi222.github.io/webhome"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn">Designr</span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="https://zedabi222.github.io/webhome/index.html"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn">Designr</span>
                     </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header9 cid-s9kJHyTfIA mbr-fullscreen mbr-parallax-background" id="header9-3">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="header9 cid-s9kJHyTfIA mbr-fullscreen mbr-parallax-background" id="header9-3">
 
     
 
@@ -111,7 +111,7 @@
             <div class="col-md-2 col-sm-4">
                 <div class="mb-3 img-logo">
                     <a href="https://mobirise.co/">
-                         <img src="assets/images/logo24.png" alt="Mobirise">
+                         <img src="assets/images/logo26.png" alt="Mobirise">
                     </a>
                 </div>
                 <p class="mbr-fonts-style foot-logo display-7">
@@ -151,7 +151,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tlTKj4YdkFDTLQdxrjV+ZdIirfyrfbhvJIWm24vIB57mIzDm5UYm4kw8QcLkrTh0vfIqGO281tTh8ycb1xTI0tMzgpxGVymDo1kaZ/ISm7WwHVC/JsE6rliC3rmoum6A">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MEjyp52u3GJFrB+YIicmYq6iakkk816f/GGYIKgiGFwkUf9vq/C9TOoKm6zXVlFgRSFUSKmYdGq0WH+r94kjiwndoSQf/4tEUvjzrAGLk9VNEmKIRfrZh8Y5PsgeKRdO">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
