--- a/page2.html
+++ b/page2.html
@@ -68,7 +68,7 @@
                         ContactUs</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="page4.html"><span class="socicon socicon-google mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Gallary</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="https://zedabi222.github.io/webhome"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn">Designr</span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="https://zedabi222.github.io/webhome/index.html"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn">Designr</span>
                     </a></div>
         </div>
     </nav>
