--- a/page6.html
+++ b/page6.html
@@ -68,13 +68,13 @@
                         ContactUs</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="page4.html"><span class="socicon socicon-google mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Gallary</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="https://zedabi222.github.io/webhome"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn">Designr</span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="https://zedabi222.github.io/webhome/index.html"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn">Designr</span>
                     </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section class="tabs3 cid-s9pFMG8WJf" id="tabs3-p">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="tabs3 cid-s9pFMG8WJf" id="tabs3-p">
 
     
 
