create github pages

--- a/page2.html
+++ b/page2.html
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header9 cid-s9kVUxwpKf mbr-fullscreen mbr-parallax-background" id="header9-6">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="header9 cid-s9kVUxwpKf mbr-fullscreen mbr-parallax-background" id="header9-6">
 
     
 
