--- a/page6.html
+++ b/page6.html
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="tabs3 cid-s9pFMG8WJf" id="tabs3-p">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="tabs3 cid-s9pFMG8WJf" id="tabs3-p">
 
     
 
