--- a/page1.html
+++ b/page1.html
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="header9 cid-s9kJHyTfIA mbr-fullscreen mbr-parallax-background" id="header9-3">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="header9 cid-s9kJHyTfIA mbr-fullscreen mbr-parallax-background" id="header9-3">
 
     
 
@@ -111,7 +111,7 @@
             <div class="col-md-2 col-sm-4">
                 <div class="mb-3 img-logo">
                     <a href="https://mobirise.co/">
-                         <img src="assets/images/logo26.png" alt="Mobirise">
+                         <img src="assets/images/logo28.png" alt="Mobirise">
                     </a>
                 </div>
                 <p class="mbr-fonts-style foot-logo display-7">
@@ -151,7 +151,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MEjyp52u3GJFrB+YIicmYq6iakkk816f/GGYIKgiGFwkUf9vq/C9TOoKm6zXVlFgRSFUSKmYdGq0WH+r94kjiwndoSQf/4tEUvjzrAGLk9VNEmKIRfrZh8Y5PsgeKRdO">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="O46ARSXgEdknx8cMUY+xH58Uq+LkbdqO5X/NIAavhQLqauKVNgZgxpiNWO1GQHZF3srdvEzCCWexG9FNa7cXgxyOWKLca33af3T08vmCV2rbNhi6GxIVdW1SMHJas5P+">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
