--- a/page3.html
+++ b/page3.html
@@ -68,13 +68,13 @@
                         ContactUs</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="page4.html"><span class="socicon socicon-google mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Gallary</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="https://zedabi222.github.io/webhome/page1.html"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn">Designer</span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="https://zedabi222.github.io/webhome/index.html"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn">Desig</span>
                     </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section form1 cid-s9l0VHNy8Y mbr-parallax-background" id="form1-d">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section form1 cid-s9l0VHNy8Y mbr-parallax-background" id="form1-d">
 
     
 
@@ -92,7 +92,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vCOWzRx1pySLLveOX4PeInvI8oSWsoCXfj06qkM6cvWG5cRqHfVbuA90EYdPISRDmo8i3Rur3K8FZaN5EWBlrSeGjbOAT+bW4SJQs/DygsykU/+UElmSsU26QDL5eYv1">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CRbs0gzZdbbzgLHWUncmeD8cCJMF7HuUDSVLH8id+M5lRPLPEZyVIwj7/EGqL2kTRrd+30UYC0SAvWXQfinksmlNYQqKBuJiJ0E5ABvB62Jwza8TJczNZN4oue+pX6VC">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
