--- a/page6.html
+++ b/page6.html
@@ -74,11 +74,12 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="tabs3 cid-s9pFMG8WJf" id="tabs3-p">
+<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="tabs3 cid-s9pFMG8WJf mbr-parallax-background" id="tabs3-p">
 
     
 
-    
+    <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
+    </div>
 
     <div class="container">
         <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
@@ -449,6 +450,7 @@ impacted by HIV &amp; AIDS in Sudan.
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/mbr-tabs/mbr-tabs.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/theme/js/script.js"></script>
