--- a/page1.html
+++ b/page1.html
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header9 cid-s9kJHyTfIA mbr-fullscreen mbr-parallax-background" id="header9-3">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="header9 cid-s9kJHyTfIA mbr-fullscreen mbr-parallax-background" id="header9-3">
 
     
 
@@ -111,7 +111,7 @@
             <div class="col-md-2 col-sm-4">
                 <div class="mb-3 img-logo">
                     <a href="https://mobirise.co/">
-                         <img src="assets/images/logo216.png" alt="Mobirise">
+                         <img src="assets/images/logo218.png" alt="Mobirise">
                     </a>
                 </div>
                 <p class="mbr-fonts-style foot-logo display-7">
@@ -151,7 +151,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xMla9zeTAuFHdPalyE9LrWZjMfI7kzznd5D87Xl+12DuCpWSNLxgNoaxuUAWmfirvUiPoEnXPyMjrzr9UTCa2HSAdNW6YD9ljZEZsi4QpiHOwWhk4GlPLFMU3ZloW92b">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dpjIXYfF5KIV/+tR0Ei8jhHMtVdr+OdoHzw6nZ0BNXCzWOXyNBjKbrPsBJwHLzvwcTHdhAEHTUp+V1eVvL8JbOqLmX4XxRoRu0Rl37YW1tHXP8TbKe3tP0TJETXFGe+h">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
